--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   scrollbar-width: none;
   font-family:'Noto Sans KR', sans-serif;
+  overflow-y: scroll;
 }
 @font-face {
   font-family: 'SUIT-Heavy';
@@ -11,9 +12,8 @@ body {
 }
 canvas {
   width: 0vw;
-  display: block;
-  position: fixed;
-  top: 0px;
+  position:fixed;
+  top:0;
 }
 #intro{
   position: fixed;
@@ -27,7 +27,10 @@ canvas {
   display: none; 
 }
 #title{
-  width: 100vw;
+  position: absolute;
+  top:0;
+  z-index: 20;
+  width: 100%;
  height: 100vh;
 }
 #innerintro{
@@ -41,19 +44,20 @@ canvas {
   margin-bottom: 43vh;
 }
 #first{
-  height: 100vh;
+  height: 200vh;
   width: 100vw;
   position: relative;
   background-color: white;
+  z-index: 30;
   top:110vh;
-  z-index: 30;
 }
-#header{
+nav{
   width: 100%;
-  z-index: 30;
+  z-index: 50;
   height: 60px;
   padding: 1rem;
   background-blend-mode:difference;
+  background-color: #8682a8;
   opacity: 90%;
   color: white;
   font-weight: bold;
@@ -64,35 +68,49 @@ canvas {
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
 }
-.header{
-  width: 100%;
-  z-index: 20;
-  height: 60px;
-  padding: 1rem;
-  color: black;
-  font-weight: bold;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-}
 #backheader{
   width: 100%;
   z-index: 50;
   height: 60px;
 
 }
-
+nav{
+  z-index: 50;
+}
+#menu{
+  width: 700px;
+  height: 69px;
+}
+#menu ul li{
+  background-color:#8682a8;
+  list-style: none;
+  float: left;
+  line-height: 60px;
+  text-align: center;
+}
+#menu .link{
+  width: 190px;
+  text-decoration: none;
+  display: block;
+  color: white;
+  font-weight: bold;
+}
+#menu .link:hover{
+  background-color: #6a63a8;
+}
+.collapse{
+  border-left: 1px solid #c0c0c0;
+}
 #header li{
   border-left: 1px solid #c0c0c0;
   padding: 0px 20px 0px 20px;
   margin: 10px 100px 10px 100px;
 }
-.header li{
-  border-left: 1px solid #c0c0c0;
-  padding: 0px 20px 0px 20px;
-  margin: 10px 100px 10px 100px;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 * {
   box-sizing: border-box;
 }
+
