--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,10 @@ canvas {
 #intro{
   position: fixed;
   top: 0;
-  height: 100%;
-  width: 42vw;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
   z-index: 20;
   margin-left: 10vw;
 }
@@ -29,19 +31,20 @@ canvas {
 #title{
   position: absolute;
   top:0;
+  display: flex;
+  align-items: center;
   z-index: 20;
-  width: 100%;
+  width: 100vw;
  height: 100vh;
 }
 #innerintro{
   width: 100%;
-  position: absolute;
+  position: relative;
+  flex:inherit;
   font-family: 'SUIT-Heavy';
-  font-size: 7vw;
+  font-size: 6vw;
   color: white;
-  line-height: 7vw;
-  bottom: 0;
-  margin-bottom: 43vh;
+  line-height: 6vw;
 }
 #first{
   height: 200vh;
@@ -53,64 +56,112 @@ canvas {
 }
 nav{
   width: 100%;
-  z-index: 50;
+  z-index: 90;
   height: 60px;
-  padding: 1rem;
-  background-blend-mode:difference;
-  background-color: #8682a8;
-  opacity: 90%;
+  background-color: #8076a2;
+  opacity: 80%;
   color: white;
   font-weight: bold;
-  display: flex;
   justify-content: space-between;
   align-items: center;
   position: fixed;
+  top:0;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
+  box-shadow: 0px 5px 10px #736f96;
 }
-#backheader{
-  width: 100%;
-  z-index: 50;
-  height: 60px;
+.navbar-custom {
+  width: 100px;
+  background-color:#8076a2;
+}
+.navbar-nav .navtext:hover {
+  background-color:#5d597c;
+}
+.navbar{
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.navbutton{
 
 }
-nav{
-  z-index: 50;
+
+@media screen and (min-width: 572px) { 
+  .navbutton {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: none;
+    padding: 0;
+    width: 50px;
+    height: 50px;
+    right: 0px;
+  }
+  #innerintro{
+    width: 100%;
+    position: relative;
+    flex:inherit;
+    font-family: 'SUIT-Heavy';
+    font-size: 6vw;
+    color: white;
+    line-height: 6vw;
+  }
 }
-#menu{
-  width: 700px;
-  height: 69px;
-}
-#menu ul li{
-  background-color:#8682a8;
-  list-style: none;
-  float: left;
-  line-height: 60px;
-  text-align: center;
-}
-#menu .link{
-  width: 190px;
-  text-decoration: none;
-  display: block;
-  color: white;
-  font-weight: bold;
-}
-#menu .link:hover{
-  background-color: #6a63a8;
-}
-.collapse{
-  border-left: 1px solid #c0c0c0;
-}
-#header li{
-  border-left: 1px solid #c0c0c0;
-  padding: 0px 20px 0px 20px;
-  margin: 10px 100px 10px 100px;
-}
-a {
-  color: inherit;
-  text-decoration: none;
-}
-* {
-  box-sizing: border-box;
+@media screen and (max-width: 572px) { 
+  .navbutton {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    padding: 0;
+    width: 50px;
+    height: 50px;
+    right: 0px;
+  }
+  #innerintro{
+    width: 45vw;
+    position: relative;
+    flex:inherit;
+    font-family: 'SUIT-Heavy';
+    font-size: 15vw;
+    color: white;
+    line-height: 17vw;
+  }
 }
 
+
+
+.line {
+  fill: none;
+  stroke: rgb(255, 255, 255);
+  stroke-width: 6;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.line1 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
+}
+.line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.opened .line1 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+.opened .line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+.opened .line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
