--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ a {
     background-color: #632424;
 }
 #first {
-    height: 100vh;
+    height: 1000px;
     padding-top: 60px;
     margin-top: 0;
     border-radius: 0 0 30px 30px;
@@ -167,7 +167,7 @@ a {
 }
 #second {
     margin-top: 60px;
-    height: 100vh;
+    height: 1000px;
     border-radius: 30px 30px 30px 30px;
     z-index: 80;
     background-color: rgb(255, 255, 255);
@@ -474,7 +474,7 @@ nav {
         width: 100%;
     }
     .section {
-        height: 95vh;
+        height: 950px;
         width: 100%;
         font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
         margin: 0 auto;
@@ -545,7 +545,6 @@ nav {
     #second {
         padding: 40px;
         margin-top: 60px;
-        height: 100vh;
         border-radius: 30px 30px 30px 30px;
         z-index: 80;
         background-color: rgb(255, 255, 255);
