--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ canvas {
     margin: 0 auto;
 }
 .section {
-    height: 95vh;
+    height: 1000px;
     width: 1200px;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     margin: 0 auto;
