--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ a {
     height: 210px;
     width: 100%;
     list-style: none;
-    background-color: rgb(243, 240, 253);
+    background-color: rgb(255, 255, 255);
 
     box-shadow: 0 0 20px #0000001f;
 }
@@ -153,8 +153,8 @@ a {
     margin-top: 60px;
     margin-bottom: 30px;
     width: 100%;
-    font-size: 50pt;
-    line-height: 50pt;
+    font-size: 40pt;
+    line-height: 40pt;
 }
 #first .text {
     word-break: keep-all;
@@ -590,7 +590,7 @@ nav {
     #list {
         position: relative;
         width: 100%;
-        height: 630px;
+        height: 540px;
         overflow: hidden;
         text-align: left;
         font-family: 'SUIT-Heavy';
@@ -604,9 +604,18 @@ nav {
         padding: 0;
     }
     .discript a {
-        padding: 30px;
-        height: 200px;
+        padding: 20px;
+        height: 180px;
         width: 100%;
+    }
+    .discript {
+        margin: 0 auto;
+        height: 180px;
+        width: 100%;
+        list-style: none;
+        background-color: rgb(255, 255, 255);
+    
+        box-shadow: 0 0 20px #0000001f;
     }
 
     #fifth .innercontent .text {
