--- a/css/style.css
+++ b/css/style.css
@@ -6,28 +6,33 @@ body {
     overflow-y: scroll;
     word-break: keep-all;
 }
+
 @font-face {
     font-family: 'SUIT-Heavy';
     src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Heavy.woff2") format('woff2');
     font-weight: normal;
     font-style: normal;
 }
+
 @font-face {
     font-family: 'SUIT-Light';
     src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Light.woff2") format('woff2');
     font-weight: normal;
     font-style: normal;
 }
+
 @font-face {
     font-family: 'SUIT-Medium';
     src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2") format('woff2');
     font-weight: normal;
     font-style: normal;
 }
+
 canvas {
     position: fixed;
     top: 0;
 }
+
 #intro {
     position: fixed;
     top: 0;
@@ -38,9 +43,11 @@ canvas {
     z-index: 20;
     margin-left: 10vw;
 }
+
 ::-webkit-scrollbar {
     display: none;
 }
+
 #title {
     position: absolute;
     top: 0;
@@ -53,11 +60,13 @@ canvas {
     margin-top: 0;
     background-color: #8e7fb934;
 }
+
 #innerwhole {
     background-color: rgba(229, 225, 243, 0.425);
     width: 1200px;
     margin: 0 auto;
 }
+
 .section {
     height: 1000px;
     width: 1200px;
@@ -71,58 +80,69 @@ canvas {
     border-radius: 30px 30px 30px 30px;
     overflow: hidden;
 }
+
 #list {
     position: relative;
-    width: 1100px;
-    height: 630px;
+    width: 100%;
+    float: left;
+    height: max-content;
     overflow: hidden;
     text-align: left;
     font-family: 'SUIT-Heavy';
-    font-size: 30pt;
+    font-size: 25pt;
     line-height: 30pt;
     margin-top: 30px;
     background-color: rgb(255, 255, 255);
     border-radius: 30px 30px 30px 30px;
 }
+
 #fifth ul {
     padding: 0;
+    height: max-content;
+    margin-bottom: 0;
 }
+
 .discript a {
     padding: 30px;
-    height: 210px;
+    height: 180px;
     width: 100%;
 }
-a {
 
+a {
     display: block;
 }
+
 .discript a {
     text-decoration-color: black;
     text-decoration: none;
     font-family: SUIT-Heavy;
 }
+
 .discript a:hover {
     text-decoration-color: black !important;
     text-decoration: none;
 }
+
 .discript a:link {
     text-decoration-color: black;
     text-decoration: none;
 }
+
 .discript a:visited {
     color: rgb(0, 0, 0);
     text-decoration-color: black;
 }
 
 .discript {
+    float: none;
     margin: 0 auto;
-    height: 210px;
+    height: 180px;
     width: 100%;
     list-style: none;
     background-color: rgb(255, 255, 255);
-
     box-shadow: 0 0 20px #0000001f;
 }
+
 #avian :hover {
     color: white;
     transition: 200ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -134,37 +154,47 @@ a {
     transition: 200ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #83aa70;
 }
+
 #siki :hover {
     color: white;
     transition: 200ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #632424;
 }
+
 #first {
-    height: 1000px;
+    height: 800px;
+    padding: 40px;
     padding-top: 60px;
     margin-top: 0;
     border-radius: 0 0 30px 30px;
     text-align: center;
     background-color: rgb(255, 255, 255);
 }
+
 #first .head {
     position: relative;
     font-family: 'SUIT-Heavy';
-    margin-top: 60px;
-    margin-bottom: 30px;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 60px;
     width: 100%;
     font-size: 40pt;
     line-height: 40pt;
 }
+
 #first .text {
-    word-break: keep-all;
+    word-break: break-all;
+    text-align: justify;
     position: relative;
     margin: 0 auto;
     font-family: 'SUIT-Medium';
-    width: 90%;
-    line-height: 20pt;
-    float: none;
+    width: 50%;
+    height: 60%;
+    padding-right: 50px;
+    line-height: 25pt;
+    float: left;
 }
+
 #second {
     margin-top: 60px;
     height: 1000px;
@@ -172,14 +202,17 @@ a {
     z-index: 80;
     background-color: rgb(255, 255, 255);
 }
+
 #sec {
     position: absolute;
 }
+
 #double {
     padding-top: 0;
     height: 90vh;
     overflow: hidden;
 }
+
 #third {
     padding: 40px;
     margin-top: 60px;
@@ -197,43 +230,49 @@ a {
     border-radius: 0 0 30px 30px;
     background-color: rgb(223, 200, 158);
 }
+
 #fifth {
     background-color: rgb(255, 255, 255);
     text-align: center;
 }
+
 #sixth {
     height: 50vh;
     background-color: rgb(255, 255, 255);
     border-radius: 30px 30px 0 0;
-
 }
+
 #sixth .innercontent .head {
     position: relative;
     font-family: 'SUIT-Heavy';
     float: left;
-    width: 100%;
+    width: 50%;
     font-size: 50pt;
     line-height: 50pt;
     word-break: break-all;
 }
+
 #sixth .innercontent .text {
     position: relative;
     font-family: 'SUIT-Heavy';
     float: left;
-    width: 100%;
+    width: 40%;
     font-size: 50pt;
     line-height: 50pt;
     word-break: break-all;
+    text-align: justify;
 }
+
 #sixth li {
     display: inline-block;
-
     font-size: 20pt;
     width: 100%;
 }
+
 #sixth li a {
     font-family: 'SUIT-Light';
 }
+
 #fifth .head {
     position: relative;
     font-family: 'SUIT-Heavy';
@@ -243,24 +282,30 @@ a {
     line-height: 40pt;
     float: none;
 }
+
 .blur {
-    height: 30vh;
+    height: 50vh;
     width: 100%;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    position: relative;
+    position: absolute;
     z-index: 30;
     margin: 0 auto;
-    top: 0;
+    bottom: -40vh;
     overflow: hidden;
     background-color: rgb(255, 255, 255);
     padding-top: 0;
-    box-shadow: 0 -100px 100px #ffffff;
+    box-shadow: 0 -140px 400px #ffffff;
 }
+
 #animation {
     position: absolute;
     display: inline;
     height: auto;
+    width: 130%;
+    left: -50%;
+    transform: translate(25%, -15%);
 }
+
 #whole {
     z-index: 80;
     position: absolute;
@@ -268,9 +313,9 @@ a {
     top: 100vh;
     background-color: rgb(243, 240, 253);
     backdrop-filter: blur(10px);
-
     box-shadow: 0 -20px 30px #00000004;
 }
+
 #second .innercontents {
     height: 100vh;
     width: 1200px;
@@ -281,6 +326,7 @@ a {
     overflow: hidden;
     word-break: keep-all;
 }
+
 #second .head {
     width: 50%;
     margin-left: auto;
@@ -290,21 +336,26 @@ a {
     overflow: hidden;
     word-break: keep-all;
 }
+
 #third .innercontent .head {
     float: none;
     position: relative;
     font-family: 'SUIT-Heavy';
 }
+
 #innertext {
     width: 600px;
 }
+
 #canvas {
     margin-top: 0;
     margin-left: -50px;
 }
+
 #third #canvas {
     margin-top: 0;
 }
+
 #third .innercontent .text {
     margin-top: 30px;
     font-family: 'SUIT-Medium';
@@ -312,69 +363,83 @@ a {
     word-break: keep-all;
     width: 540px;
 }
+
 #fourth .innercontent {
     float: left;
 }
+
 #fourth .innercontent .head {
     float: none;
     position: relative;
     font-family: 'SUIT-Heavy';
 }
+
 #fourth .innercontent .text {
     float: none;
     margin-top: 30px;
     font-family: 'SUIT-Medium';
     line-height: 19pt;
     word-break: keep-all;
-
     width: 540px;
 }
+
 #fifth .innercontent .text {
-    float: none;
+    float: left;
+    margin: 0;
     margin-top: 30px;
+    padding-right: 25px;
     font-family: 'SUIT-Medium';
     line-height: 19pt;
-    word-break: keep-all;
-
-    width: 1100px;
+    word-break: break-all;
+    text-align: left;
+    width: 100%;
 }
+
 #fourth img {
     float: right;
     position: relative;
     top: -400px;
 }
+
 #double {
     height: 110vh;
 }
+
 #undernav {
     display: none;
 }
+
 a {
     color: rgb(0, 0, 0);
     text-decoration-color: black !important;
     text-decoration: none;
     font-family: SUIT-Heavy;
 }
+
 a:hover {
     color: rgb(0, 0, 0);
     text-decoration-color: black !important;
     text-decoration: none;
 }
+
 a:link {
     color: rgb(0, 0, 0);
     text-decoration-color: black !important;
     text-decoration: none;
 }
+
 a:visited {
     color: rgb(0, 0, 0);
     text-decoration-color: black !important;
 }
+
 .innercontent {
     height: 100vh;
     width: 1100px;
     margin: 0 auto;
     display: block;
 }
+
 #canvas {
     position: absolute;
     left: 50%;
@@ -383,12 +448,13 @@ a:visited {
     height: 100%;
     overflow: hidden;
 }
+
 #second canvas {
     margin-left: auto;
     margin-right: auto;
     display: block;
-
 }
+
 .innercontent .head {
     position: relative;
     font-family: 'SUIT-Heavy';
@@ -397,6 +463,7 @@ a:visited {
     line-height: 50pt;
     word-break: keep-all;
 }
+
 .innercontent .text {
     float: left;
     font-family: 'SUIT-Medium';
@@ -405,18 +472,20 @@ a:visited {
     width: 50%;
     word-break: keep-all;
 }
+
 .innercontent .view {
     width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
     height: 100%;
 }
+
 iframe {
     padding: 0;
     border-radius: 10px 10px 10px 10px;
-    float: right;
-    margin-top: 40px;
-    width: 100%;
+    float: left;
+    width: 50%;
+    padding-right: 50px;
     margin-bottom: 40px;
     height: 60%;
     box-shadow: 0 0 20px #0000003a;
@@ -453,16 +522,73 @@ nav {
     align-items: center;
 }
 
+#fifth .innercontent .head {
+    position: relative;
+    font-family: 'SUIT-Heavy';
+    text-align: center;
+    float: left;
+    width: 100%;
+    font-size: 40pt;
+    line-height: 40pt;
+    word-break: break-all;
+}
+
 .navbutton {}
 
 .content-section {}
+
 .content .paragraph,
 .content .subheading {
     opacity: 1;
     opacity: calc(1 + var(--viewport-y));
 }
-@media screen and (max-width: 1200px) {
 
+@media screen and (max-width: 1200px) {
+    #first .head {
+        position: relative;
+        font-family: 'SUIT-Heavy';
+        text-align: center;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        width: 100%;
+        font-size: 26pt;
+        line-height: 40pt;
+    }
+    #first .text {
+        position: relative;
+        font-family: 'SUIT-medium';
+        width: 100%;
+        padding: 0;
+        height: auto;
+    }
+    iframe {
+        padding: 0;
+        border-radius: 10px 10px 10px 10px;
+        float: right;
+        margin-top: 40px;
+        width: 100%;
+        margin-bottom: 40px;
+        box-shadow: 0 0 20px #0000003a;
+    }
+    #first a {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    iframe {
+        padding: 0;
+        border-radius: 10px 10px 10px 10px;
+        float: right;
+        margin-top: 40px;
+        width: 100%;
+        height: 50%;
+        margin-bottom: 40px;
+        box-shadow: 0 0 20px #0000003a;
+    }
+}
+
+@media screen and (max-width: 1200px) {
     #innerwhole {
         background-color: rgba(229, 225, 243, 0.425);
         width: 90%;
@@ -498,7 +624,7 @@ nav {
         z-index: 50;
         position: relative;
         overflow: hidden;
-        word-break: keep-all;
+        word-break: break-all;
     }
     #second .head {
         width: 100%;
@@ -507,7 +633,7 @@ nav {
         z-index: 50;
         position: relative;
         overflow: hidden;
-        word-break: keep-all;
+        word-break: break-all;
     }
     #third {
         padding: 40px;
@@ -523,7 +649,7 @@ nav {
         float: left;
         font-size: 30pt;
         line-height: 30pt;
-        word-break: keep-all;
+        word-break: break-all;
     }
     .innercontent .text {
         float: left;
@@ -531,7 +657,7 @@ nav {
         font-size: 13pt;
         line-height: 19pt;
         width: 50%;
-        word-break: keep-all;
+        word-break: break-all;
     }
     .innercontent .view {
         width: 100%;
@@ -557,25 +683,23 @@ nav {
         border-radius: 0 0 30px 30px;
         background-color: rgb(223, 200, 158);
     }
-    #third .innercontent{
+    #third .innercontent {
         width: 100%;
     }
-    #fourth .innercontent{
+    #fourth .innercontent {
         width: 100%;
     }
     #fifth {
         padding: 40px;
     }
-    
     #third .innercontent .text {
         width: 100%;
         word-break: break-all;
-        
         font-size: 13pt;
         line-height: 16pt;
     }
     #fourth .innercontent .text {
-        word-break: keep-all;
+        word-break: break-all;
         width: 100%;
         font-size: 13pt;
         line-height: 16pt;
@@ -585,12 +709,12 @@ nav {
         float: left;
         font-family: 'SUIT-Medium';
         width: 100%;
-        word-break: keep-all;
+        word-break: break-all;
     }
     #list {
         position: relative;
         width: 100%;
-        height: 540px;
+        height: max-content;
         overflow: hidden;
         text-align: left;
         font-family: 'SUIT-Heavy';
@@ -605,34 +729,41 @@ nav {
     }
     .discript a {
         padding: 20px;
-        height: 180px;
+        height: 140px;
         width: 100%;
     }
     .discript {
         margin: 0 auto;
-        height: 180px;
+        height: 140px;
         width: 100%;
         list-style: none;
         background-color: rgb(255, 255, 255);
-    
         box-shadow: 0 0 20px #0000001f;
     }
-
+    #fifth .innercontent .head {
+        position: relative;
+        font-family: 'SUIT-Heavy';
+        text-align: center;
+        float: left;
+        width: 100%;
+        font-size: 30pt;
+        line-height: 40pt;
+        word-break: break-all;
+    }
     #fifth .innercontent .text {
         float: none;
+        text-align: left;
         margin-top: 30px;
         font-family: 'SUIT-Medium';
         font-size: 14pt;
         line-height: 19pt;
-        word-break: keep-all;
-
+        word-break: break-all;
         width: 100%;
     }
     #sixth {
         height: 40vh;
         background-color: rgb(255, 255, 255);
         border-radius: 30px 30px 0 0;
-
         padding: 30px;
     }
     #sixth .innercontent .head {
@@ -640,9 +771,9 @@ nav {
         font-family: 'SUIT-Heavy';
         float: left;
         width: 100%;
-        font-size: 40pt;
+        font-size: 30pt;
         line-height: 40pt;
-        word-break: keep-all;
+        word-break: break-all;
     }
     #sixth .innercontent .text {
         position: relative;
@@ -655,7 +786,6 @@ nav {
     }
     #sixth li {
         display: inline-block;
-
         font-size: 20pt;
         width: 100%;
     }
@@ -689,10 +819,11 @@ nav {
         padding-top: 0;
         box-shadow: 0 -100px 100px #ffffff;
     }
-    #canvas{
+    #canvas {
         opacity: 50%;
     }
 }
+
 @media screen and (min-width: 572px) {
     .navbutton {
         background-color: transparent;
@@ -718,6 +849,7 @@ nav {
         background-color: #8076a200;
     }
 }
+
 @media screen and (max-width: 572px) {
     .navbutton {
         background-color: transparent;
@@ -744,6 +876,7 @@ nav {
         backdrop-filter: blur(10px);
     }
 }
+
 @media screen and (max-width: 365px) {
     .innercontent {
         height: 41vw;
@@ -763,28 +896,34 @@ nav {
     stroke-width: 6;
     transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .line1 {
     stroke-dasharray: 60 207;
     stroke-width: 6;
 }
+
 .line2 {
     stroke-dasharray: 60 60;
     stroke-width: 6;
 }
+
 .line3 {
     stroke-dasharray: 60 207;
     stroke-width: 6;
 }
+
 .opened .line1 {
     stroke-dasharray: 90 207;
     stroke-dashoffset: -134;
     stroke-width: 6;
 }
+
 .opened .line2 {
     stroke-dasharray: 1 60;
     stroke-dashoffset: -30;
     stroke-width: 6;
 }
+
 .opened .line3 {
     stroke-dasharray: 90 207;
     stroke-dashoffset: -134;
