--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ a {
 
 #first .head {
     position: relative;
+    word-break: keep-all;
     font-family: 'SUIT-Heavy';
     text-align: center;
     margin-top: 30px;
@@ -190,7 +191,7 @@ a {
     font-family: 'SUIT-Medium';
     width: 50%;
     height: 60%;
-    padding-right: 50px;
+    padding-left: 50px;
     line-height: 25pt;
     float: left;
 }
@@ -234,12 +235,9 @@ a {
 #fifth {
     background-color: rgb(255, 255, 255);
     text-align: center;
-}
-
-#sixth {
-    height: 50vh;
-    background-color: rgb(255, 255, 255);
+    height: max-content;
     border-radius: 30px 30px 0 0;
+    margin-bottom: 0;
 }
 
 #sixth .innercontent .head {
@@ -543,16 +541,32 @@ nav {
     opacity: calc(1 + var(--viewport-y));
 }
 
+@media screen and (max-width: 820px) {
+    iframe {
+        padding: 0;
+        border-radius: 10px 10px 10px 10px;
+        float: right;
+        margin-top: 0px;
+        width: 100%;
+        height: 50%;
+        margin-bottom: 20px;
+        box-shadow: 0 0 20px #0000003a;
+    }
+}
+
 @media screen and (max-width: 1200px) {
+    #first {
+        padding: 20px;
+    }
     #first .head {
         position: relative;
         font-family: 'SUIT-Heavy';
         text-align: center;
         margin-top: 30px;
-        margin-bottom: 30px;
+        margin-bottom: 15px;
         width: 100%;
         font-size: 26pt;
-        line-height: 40pt;
+        line-height: 30pt;
     }
     #first .text {
         position: relative;
@@ -565,30 +579,14 @@ nav {
         padding: 0;
         border-radius: 10px 10px 10px 10px;
         float: right;
-        margin-top: 40px;
+        margin-top: 20px;
         width: 100%;
-        margin-bottom: 40px;
+        margin-bottom: 20px;
         box-shadow: 0 0 20px #0000003a;
     }
     #first a {
         display: none;
     }
-}
-
-@media screen and (max-width: 820px) {
-    iframe {
-        padding: 0;
-        border-radius: 10px 10px 10px 10px;
-        float: right;
-        margin-top: 40px;
-        width: 100%;
-        height: 50%;
-        margin-bottom: 40px;
-        box-shadow: 0 0 20px #0000003a;
-    }
-}
-
-@media screen and (max-width: 1200px) {
     #innerwhole {
         background-color: rgba(229, 225, 243, 0.425);
         width: 90%;
@@ -630,13 +628,15 @@ nav {
         width: 100%;
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 50px;
         z-index: 50;
         position: relative;
         overflow: hidden;
         word-break: break-all;
     }
     #third {
-        padding: 40px;
+        padding: 20px;
+        padding-top: 40px;
         margin-top: 60px;
         height: 450px;
         width: 100%;
@@ -669,14 +669,15 @@ nav {
         width: 100%;
     }
     #second {
-        padding: 40px;
+        padding: 20px;
         margin-top: 60px;
         border-radius: 30px 30px 30px 30px;
         z-index: 80;
         background-color: rgb(255, 255, 255);
     }
     #fourth {
-        padding: 40px;
+        padding: 20px;
+        padding-top: 40px;
         margin-top: 0;
         width: 100%;
         height: 450px;
@@ -690,7 +691,8 @@ nav {
         width: 100%;
     }
     #fifth {
-        padding: 40px;
+        padding: 20px;
+        padding-top: 40px;
     }
     #third .innercontent .text {
         width: 100%;
@@ -743,12 +745,12 @@ nav {
     #fifth .innercontent .head {
         position: relative;
         font-family: 'SUIT-Heavy';
-        text-align: center;
+        text-align: left;
         float: left;
         width: 100%;
         font-size: 30pt;
         line-height: 40pt;
-        word-break: break-all;
+        word-break: keep-all;
     }
     #fifth .innercontent .text {
         float: none;
@@ -879,14 +881,13 @@ nav {
 
 @media screen and (max-width: 365px) {
     .innercontent {
-        height: 41vw;
-        width: 85vw;
-        padding: 30px;
+        height: 100%;
+        width: 100%;
         margin: 0;
         position: relative;
         font-family: 'SUIT-Heavy';
         font-size: 80pt;
-        line-height: 80pt;
+        line-height: 20pt;
     }
 }
 
