--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
 body {
     margin: 0;
-    width: 100vw;
     scrollbar-width: none;
     font-family: 'Noto Sans KR', sans-serif;
     overflow-y: scroll;
     overflow-x: hidden;
     word-break: keep-all;
+}
+
+html {
+    overflow-x: hidden;
 }
 
 @keyframes fadein {
@@ -771,6 +774,9 @@ nav {
 }
 
 @media screen and (max-width: 1200px) {
+    #copyline {
+        width: 100%;
+    }
     #first {
         padding: 20px;
     }
